<package>
<name>pr_msgs</name>
<version>1.0.0</version>
<maintainer email="jvarley@cs.columbia.edu">Jake Varley</maintainer>
	<description>

		ROS messages for Personal Robotics project at Intel/CMU
        This package ideally includes all the custom ROS messages and services
        used inside the Personal Robotics project at Intel/CMU. 

  </description>
  <author>herb-dev@lists.andrew.cmu.edu</author>
  <license>LGPL</license>


<buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>

